EP-177 Fix the Loan Selector in `app` to display truncated text if it goes over the desired width.

--- a/microservices/app/imports/ui/components/SideNavUser/SideNavUser.scss
+++ b/microservices/app/imports/ui/components/SideNavUser/SideNavUser.scss
@@ -13,7 +13,17 @@
 
   transition: all 300ms $bezier;
 
-  background-color: #FFF;
+  background-color: #fff;
+
+  .mui-select div[role='button'][aria-haspopup='true'] {
+    display: block;
+    padding-right: 30px;
+    padding-top: 0;
+
+    > svg {
+      vertical-align: text-top;
+    }
+  }
 }
 
 .side-nav-user .scrollable {
@@ -40,7 +50,7 @@
   transition: all 300ms $bezier;
   text-decoration: none;
 
-  color: #343A40 !important;
+  color: #343a40 !important;
 }
 
 .side-nav-user .link .title {
@@ -55,12 +65,12 @@
 }
 
 .side-nav-user .link:hover {
-  background-color: #F4F6F8;
+  background-color: #f4f6f8;
 }
 
 .side-nav-user .link.active-link {
   border-left: 2px solid $primary;
-  background-color: #F1F3F5;
+  background-color: #f1f3f5;
 }
 
 .side-nav-user .link.active-link h4 {
@@ -94,7 +104,7 @@
   height: 4px;
 
   border-radius: 100%;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .side-nav-user .side-stepper .top-title {
@@ -129,7 +139,7 @@
 }
 
 .side-nav-user .side-stepper .list .step.isActive {
-  background-color: #F8F9FA;
+  background-color: #f8f9fa;
 }
 
 .side-nav-user .side-stepper .list .step.isActive .title {
@@ -137,7 +147,7 @@
 }
 
 .side-nav-user .side-stepper .list .step:hover {
-  background-color: #F9FAFB;
+  background-color: #f9fafb;
 }
 
 .side-nav-user .side-stepper .list .step:first-child {
@@ -179,9 +189,9 @@
   height: 32px;
   margin-right: 8px;
 
-  color: #FFF;
+  color: #fff;
   border-radius: 100%;
-  background-color: #CED4DA;
+  background-color: #ced4da;
 }
 
 .side-nav-user .side-stepper .list .step .top .icon.done {
@@ -192,7 +202,7 @@
   width: 18px !important;
   height: 18px !important;
 
-  color: #FFF !important;
+  color: #fff !important;
 }
 
 .side-nav-user .side-stepper .list .step .top .text {
@@ -203,13 +213,13 @@
 }
 
 .side-nav-user .side-stepper .list .step .top .text .title {
-  color: #343A40;
+  color: #343a40;
 
   font-weight: 400;
 }
 
 .side-nav-user .side-stepper .list .step .top .text .subtitle {
-  color: #868E96;
+  color: #868e96;
 
   font-weight: 400;
 }
@@ -220,8 +230,8 @@
 
   height: 100%;
 
-  opacity: .5;
-  border-right: 1px solid #DEE2E6;
+  opacity: 0.5;
+  border-right: 1px solid #dee2e6;
 }
 
 .side-nav-user .side-stepper .list .step:first-child .absolute-line {
@@ -264,7 +274,7 @@
 .side-nav-user .side-stepper .list .step .step-list .item:hover {
   cursor: pointer;
 
-  background-color: #F4F6F8;
+  background-color: #f4f6f8;
 }
 
 .side-nav-user .side-stepper .list .step .step-list .item.disable {
@@ -282,7 +292,7 @@
 
   width: 48px;
 
-  color: #DEE2E6;
+  color: #dee2e6;
 }
 
 .side-nav-user
@@ -309,7 +319,7 @@
   .item
   .icon
   .available-icon {
-  background-color: #DEE2E6;
+  background-color: #dee2e6;
 }
 
 .side-nav-user .side-stepper .list .step .step-list .item .icon.warning {
@@ -342,13 +352,13 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 
-  color: #343A40;
+  color: #343a40;
 
   font-weight: 400;
 }
 
 .side-nav-user .side-stepper .list .step .step-list .item .text .subtitle {
-  color: #ADB5BD;
+  color: #adb5bd;
 
   font-weight: 400;
 }
@@ -366,7 +376,7 @@
 
 .side-nav-user .side-stepper .list .step .step-list .item.active {
   border-left: 1px solid $primary;
-  background-color: #F1F3F5;
+  background-color: #f1f3f5;
 }
 
 .side-nav-user .side-stepper .list .step .step-list .item.active .title {
